# fabre

./: .gitignore  README.md  submission_f0e91036.json
.githooks/: prepare-commit-msg
.review-scratch/: aes-platform.txt  aes-rubrics.txt  attestation-explanations.txt  attestation-rubrics.txt  awk-rubrics.txt  blob-attestation-rubrics.txt  cpp-explanations.txt  cpp-rubrics.txt  cpp-ui-paste.txt  feedback-0c176558-e5c1-444a-804b-f4b4cc3cbd29.txt  feedback-5ee796af-bc2f-4a6a-b2e5-fb4b97ef3456.txt  feedback-71323da7-976c-405b-9dcd-c24d83fa6102.txt  feedback-e7d1cac7-538c-4f65-ba21-eb38d47c5242.txt  feedback-f0e91036-8b36-4f80-9e35-52e7ce33dd3e.txt  feedback-fbb351b7-0c45-4402-9b19-08d2cd8fddf8.txt  java-task-ideas-shortlist.md  ledger-explanations.txt  ledger-rubrics.txt  maven-locks-explanations.txt  maven-locks-rubrics.txt  php-explanations.txt  php-platform.txt  php-rubrics.txt  registry-explanations.txt  registry-rubrics.txt  resubmit_aes.py  resubmit_attestation.py  resubmit_cpp.py  resubmit_one.py  resubmit_php.py  resubmit_registry.py  resubmit_signalbox.py  resubmit_tls.py  resubmit_trailswitch.py  resubmit_trivia.py  signalbox-explanations.txt  signalbox-rubrics.txt  signature-trust-coldread-r2.md  signature-trust-coldread-verdict.md  signature-trust-fixpoint-decision.md  (+13 more)
docs/: New submission requirements.txt  terminus-lessons-learned.md
enforce-java-release-signature-trust/: .snorkel_config  (+2 more)
repair-cpp-setup-auditor/environment/cpp-auditor/: CMakeLists.txt
repair-cpp-setup-auditor/environment/cpp-auditor/src/: audit.cpp  audit.hpp  main.cpp  parse.cpp
(+636 files in other folders)
